# SoloCinema

./: .env.example  .gitignore  PLAN.md  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  render.yaml
.github/workflows/: collect.yml
app/: globals.css  layout.tsx  page.tsx
app/solocinema/: board-utils.ts  filter-bar.tsx  filter-rail.tsx  flap-board.tsx  page.tsx
collector/: __init__.py
collector/fixtures/: imax_calendar_all.html  imax_listing.html  landmark_seatmap.json  seatmap_dom.html
collector/solocinema_collector/: __init__.py  atom.py  cineplex.py  cli.py  imax.py  key_refresh.py  landmark.py  models.py  playwright_probe.py  seat_parser.py  storage.py  url_guard.py
collector/tests/: test_atom.py  test_cineplex.py  test_imax.py  test_key_refresh.py  test_landmark.py  test_seat_parser.py  test_storage.py
docs/: imax-research.md
lib/solocinema/: data.ts  filters.ts  sample.ts  sort.ts  time.ts  types.ts
mockups/: README.md  index.html
mockups/designs/: 01-private-screening.html  02-departures.html  03-dusk.html  04-auditorium.html  05-the-reel.html  board-a-sodium.html  board-b-ivory.html  board-c-cathode.html  board-d-marquee.html
research/: README.md  collector-efficiency-audit.md  hosting-options.md
supabase/: schema.sql
supabase/migrations/: 0002_lock_anon_to_view.sql  0003_prune_seat_snapshots.sql
tests/: solocinema-filters.test.ts  solocinema-sort.test.ts
